              link diagrams with fewer than 64 link components, and added a
              new routine rewriteVirtual() for working with virtual link
              diagrams.
            - Routine hasReducingPass() can now handle multiple-component links.
            - Routines bracket() and jones() now support multithreading when
              using the naive algorithm.
            - Added a variant of translate() that takes crossings instead of
              strand references.
            - Renamed intelligentSimplify() to simplify().  The old name is
              kept as a deprecated alias.
            - Fixed a bug in fromDT() that was producing non-planar diagrams
              for some non-minimal encodings with spurious R1 twists.  The
              solution was to drop the old code completely (which was imported
              from elsewhere) and instead to piggy-back on Regina's own Gauss
              code reconstruction routine.  As a result, fromDT() might now
              make different choices when resolving the inherent ambiguities
              in Dowker-Thistlethwaite notation.
            - Fixed a bug where calling resolve() would not clear out any
              cached link polynomials that had already been computed.
            - Overhaul of the internal change span classes, including a new
              inner class ChangeAndClearSpan.
            - Optimised so that computed topological properties (e.g., Jones
              and HOMFLY-PT polynomials) are preserved through operations that
              do not change the topology (e.g., Reidemeister moves).
            - Renamed dumpConstruction() to source(), and extended it to produce
              either C++ and Python code via an optional language argument.
              The old C++-only dumpConstruction() is kept but deprecated.
              Also fixed a problem where the C++ initialiser lists were empty
              (instead of containing a single 0) for zero-crossing components.